# valhallaAPI

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-release.txt  requirements.txt  setup.cfg  setup.py  valhalla-cli
.github/workflows/: integration-tests.yml  python-tests.yml
_sass/: valhalla.scss
assets/css/: style.css  style.scss  valhalla.css
tests/: context.py  test_basic.py  test_cli_and_sigma.py  test_cli_flags.py
valhallaAPI/: __init__.py  filters.py  helper.py  valhalla.py  valhalla_cli.py
