[metadata]
name = valhallaapi
version = attr: valhallaAPI.version.__version__
author = Nextron
author_email = florian.roth@nextron-systems.com
description = Valhalla API Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NextronSystems/valhallaAPI
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    packaging
    requests
    configparser
python_requires = >=3.6

[options.packages.find]
include =
    valhallaAPI*

[options.entry_points]
console_scripts =
    valhalla-cli = valhallaAPI.valhalla_cli:main
